--- a/public/projects.json
+++ b/public/projects.json
@@ -7,7 +7,7 @@
         "githubClient": "https://github.com/provashish95/metal-parts-world",
         "githubServer": "https://github.com/provashish95/metal-parts-world-server",
         "tools": "['ReactJs', 'React-bootstrap','React hook form', 'React query', 'json web token', 'Node js', 'MongoDB','Firebase', 'Express js', 'Stripe']",
-        "img": "https://i.ibb.co/dGDkr4v/1.jpg"
+        "img": "https://i.ibb.co/HxyZ81k/metal-parts-world.png"
     },
     {
         "id": 2,
@@ -17,7 +17,7 @@
         "githubClient": "https://github.com/provashish95/books-warehouse-",
         "githubServer": "https://github.com/provashish95/books-warehouse-server",
         "tools": "['ReactJs', 'React-bootstrap','React hook form', 'json web token', 'Node js', 'MongoDB','Firebase', 'Express js']",
-        "img": "https://i.ibb.co/dGDkr4v/1.jpg"
+        "img": "https://i.ibb.co/QvZF76F/books-warehouse.png"
     },
     {
         "id": 3,
@@ -27,6 +27,6 @@
         "githubClient": "https://github.com/provashish95/gym-master",
         "githubServer": " ",
         "tools": "['ReactJs', 'React-bootstrap', 'json web token', 'Node js', 'MongoDB','Firebase', 'Express js']",
-        "img": "https://i.ibb.co/dGDkr4v/1.jpg"
+        "img": "https://i.ibb.co/QKFmfGJ/gym-master.png"
     }
 ]
